main.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

* {
  font-family: 'Montserrat', sans-serif;
  box-sizing: border-box;
}

header {
  display: flex;
  justify-content: flex-start;
  width: 100%;
  max-width: 1084px;
  padding: 20px 30px;
}
.logo {
  width: 200px;
  height: 38px;

}

body {
  display: flex;
  flex-direction: column;
  align-items: center;
}

h3 {
  font-size: 20px;
  font-weight: 600;
  margin: 0 0 10px 0;
  color: #DC2828;
}

p {
  font-size: 13px;
  font-weight: 300;
  margin: 0 0 0 ;
  color: black;
}

.carousel {
  width: 100%;
  max-width: min(1024px, calc(100% - 60px));
}

.carousel__slide {
  display: flex;
  position: relative;
  flex-direction: column;
}

.carousel__slide__sticker {
  position: absolute;
  top: 20px;
  right: 20px;
  padding: 10px 20px;
  background-color: red;
  border: 2px solid white;
  border-radius: 2px;
}

.carousel__slide__sticker h3 {
  width: 100%;
  margin: 0;
  color: white;
}

.carousel__slide__banner {
  padding: 20px 20px 0 20px;
  background-color: rgba(240,240,240,1);
  display: flex;
  flex-direction: column;
  align-items: center;
}

.carousel__slide__banner__button {
  width: 200px;
  padding: 10px;
  font-size: 14px;
  font-weight: 600;
  color: black;
  border: 2px solid #DC2828;
  background-color: #FFFFFF;
  border-radius: 2px;
  margin: 20px;
  text-align: center;
  text-decoration: none;
}

.carousel__slide__details__button:hover {
  cursor: pointer;
}

.carousel img {
  
  max-height: 600px;
  object-fit: cover;
  object-position: bottom;
}

@media (min-width: 800px) {
  
  h3 {
    font-size: 30px;
  }
  
  p {
    font-size: 15px;
  }

  .carousel__slide {
    flex-direction: row;
  }

  .carousel__slide__sticker {
    top: 40px;
    right: 40px;
  }

  .carousel__slide__banner {
    position: absolute;
    background-color: rgba(255,255,255,0.5);
    bottom: 20px;
    padding: 20px;
    flex-direction: row;
  }

  .carousel img {
    width: 100%;
  }
}

